--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^0.19.2",
+    "date-fns": "^2.12.0",
     "filesize": "^6.1.0",
     "history": "^4.10.1",
     "polished": "^3.5.2",
@@ -13,7 +15,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
